--- a/css/xot_main.css
+++ b/css/xot_main.css
@@ -1896,6 +1896,10 @@ li ul {
   gap: var(--flex-gap, 1rem);
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 /* Responsive width classes */
 .w-10 {
   width: 10%;
